Refactor code structure for improved readability and maintainability

--- a/solution/phase1_phase2.ipynb
+++ b/solution/phase1_phase2.ipynb
@@ -3468,7 +3468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "74cfaf45",
    "metadata": {
     "execution": {
@@ -3478,7 +3478,36 @@
      "shell.execute_reply": "2026-02-21T12:14:26.948270Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved phase2 outputs to: /Users/moparo/u/mlproject/data/phase2_output\n",
+      "\n",
+      "Top-level files:\n",
+      "- .DS_Store\n",
+      "- README.md\n",
+      "- csv\n",
+      "- feature_columns.txt\n",
+      "- metadata.json\n",
+      "- pkl\n",
+      "\n",
+      "PKL files:\n",
+      "- engineered_full.pkl\n",
+      "- robust_scaler.pkl\n",
+      "- test_split.pkl\n",
+      "- train_split.pkl\n",
+      "- val_split.pkl\n",
+      "\n",
+      "CSV files:\n",
+      "- engineered_full.csv\n",
+      "- test_split.csv\n",
+      "- train_split.csv\n",
+      "- val_split.csv\n"
+     ]
+    }
+   ],
    "source": [
     "from pathlib import Path\n",
     "import json\n",
