--- a/solution/phase1_phase2.ipynb
+++ b/solution/phase1_phase2.ipynb
@@ -1409,7 +1409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "e42623f2",
    "metadata": {
     "execution": {
@@ -1614,7 +1614,7 @@
        "4              NaN              NaN           NaN  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1642,7 +1642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "30b627db",
    "metadata": {
     "execution": {
@@ -1948,7 +1948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "992476fe",
    "metadata": {
     "execution": {
@@ -2053,7 +2053,7 @@
        "4 2013-01-05  2013      1           1    5          5           1"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2086,7 +2086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "b4a0938c",
    "metadata": {
     "execution": {
@@ -2814,7 +2814,7 @@
        "[20 rows x 48 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2900,7 +2900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "5889f96b",
    "metadata": {
     "execution": {
@@ -3120,8 +3120,9 @@
     "# ------------------------------\n",
     "# We derive holiday distance from dates where StateHoliday != '0'.\n",
     "# Distances become directional clocks around holidays.\n",
-    "unique_dates = np.array(sorted(df['Date'].dt.normalize().unique()))\n",
-    "holiday_dates = np.array(sorted(df.loc[df['StateHoliday'] != '0', 'Date'].dt.normalize().unique()))\n",
+    "# NOTE: enforce datetime64 arrays to avoid object-dtype arithmetic issues across pandas/numpy versions.\n",
+    "unique_dates = np.sort(np.unique(df['Date'].dt.normalize().to_numpy(dtype='datetime64[ns]')))\n",
+    "holiday_dates = np.sort(np.unique(df.loc[df['StateHoliday'] != '0', 'Date'].dt.normalize().to_numpy(dtype='datetime64[ns]')))\n",
     "\n",
     "if len(holiday_dates) > 0:\n",
     "    pos = np.searchsorted(holiday_dates, unique_dates)\n",
@@ -3139,13 +3140,13 @@
     "    next_dist[next_ok] = (holiday_dates[next_idx[next_ok]] - unique_dates[next_ok]) / np.timedelta64(1, 'D')\n",
     "\n",
     "    holiday_distance_map = pd.DataFrame({\n",
-    "        'Date': unique_dates,\n",
+    "        'Date': pd.to_datetime(unique_dates),\n",
     "        'days_since_prev_stateholiday': prev_dist,\n",
     "        'days_to_next_stateholiday': next_dist,\n",
     "    })\n",
     "else:\n",
     "    holiday_distance_map = pd.DataFrame({\n",
-    "        'Date': unique_dates,\n",
+    "        'Date': pd.to_datetime(unique_dates),\n",
     "        'days_since_prev_stateholiday': np.nan,\n",
     "        'days_to_next_stateholiday': np.nan,\n",
     "    })\n",
