phase4 conclusions added

--- a/solution/phase4.ipynb
+++ b/solution/phase4.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "<div dir=\"rtl\" style=\"color:red; font-size:1.2em; font-weight:bold; text-align:center;\">\n",
-    "قبل از اجرای این فاز، گرفتن خروجی از فاز ۲ پروژه الزامی است.\n",
+    "You should run phase 2 before running this phase\n",
     "</div>\n"
    ]
   },
@@ -545,6 +545,46 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4f4841a9",
+   "metadata": {},
+   "source": [
+    "> # 📊 Section 1 Conclusion: Multi-Step Forecasting & Horizon Error Analysis\n",
+    "> \n",
+    "> **Objective:** To evaluate the temporal degradation of predictive performance across a 7-day forecasting horizon and assess the model's ability to capture underlying sales dynamics.\n",
+    "> \n",
+    "> ### 🔍 Key Observations\n",
+    "> - **Trend & Seasonality Capture:** The temporal plot tracking Actual vs. Predicted Sales for Store 1 demonstrates that the model successfully captures structural time-series patterns, including weekly seasonality and sharp drops (e.g., zero-sales days, likely representing store closures or Sundays).\n",
+    "> - **Error Degradation Over Time:** As anticipated in multi-step forecasting models, there is an autoregressive accumulation of error. The $RMSE$ increases gradually from the 1-day ahead forecast to the 7-day ahead forecast.\n",
+    "> - **Quantitative Metrics:** > # 📊 Section 1 Comprehensive Report: Multi-Step Forecasting & Horizon Error Analysis\n",
+    "> \n",
+    "> **Objective:** \n",
+    "> To evaluate the temporal degradation of predictive performance across a 7-day forecasting horizon ($t+1$ to $t+7$) and systematically assess the model's ability to capture underlying retail sales dynamics over a full weekly cycle.\n",
+    "> \n",
+    "> ### 🧠 Methodological Justification: Why a 7-Day Multi-Step Forecast?\n",
+    "> In real-world retail and supply chain operations, single-step forecasting ($t+1$) is often insufficient for strategic decision-making. Procuring inventory, scheduling staff, and managing logistics require lead times that extend beyond a single day. \n",
+    "> A **7-day forecasting horizon** was specifically selected to align with the natural operational cycle of retail stores (a full week). By extending the prediction window to $t+7$, the model allows decision-makers to proactively plan for the upcoming week rather than simply reacting to daily fluctuations. The approach tests the model's robustness against autoregressive error accumulation, ensuring it remains reliable over a longer, operationally meaningful timeframe.\n",
+    "> \n",
+    "> ### 🔍 Detailed Quantitative & Qualitative Observations\n",
+    "> \n",
+    "> **1. Temporal Dynamics & Pattern Recognition:**\n",
+    "> - The temporal plot detailing Actual vs. Predicted Sales for Store 1 illustrates that the multi-step model successfully traces the structural boundaries of the time series.\n",
+    "> - The model effectively anticipates severe drops (zero-sales days, which systematically represent Sundays or official store closures) and accurately predicts the subsequent rebound peaks, demonstrating that the model has internalized the weekly sales rhythm rather than just smoothing the data.\n",
+    "> \n",
+    "> **2. Error Propagation and Horizon Analysis:**\n",
+    "> - As empirically expected in multi-step forecasting, predictive uncertainty increases as the horizon extends further into the future.\n",
+    "> - **Immediate Horizon ($t+1$):** The model performs optimally on the next day, recording the lowest error metrics with an $RMSE$ of $745.0$ and a $MAPE$ of approximately $8.2\\%$.\n",
+    "> - **Mid-Horizon Degradation ($t+2$ to $t+6$):** The error metrics experience a non-linear accumulation. The $RMSE$ grows progressively from $814.3$ ($t+2$) to a peak of $868.6$ at $t+6$. Similarly, the $MAPE$ peaks at approximately $9.4\\%$ on the 6th day.\n",
+    "> \n",
+    "> **3. The $t+7$ Seasonality Effect:**\n",
+    "> - A critical and scientifically significant observation from the Error vs. Horizon charts is the **error reduction at $t+7$**. \n",
+    "> - Instead of continuing to rise, the $RMSE$ drops back to $838.1$ and the $MAPE$ decreases to $\\approx 9.1\\%$. This phenomenon highlights the strong **7-day weekly seasonality** inherent in retail sales. The model demonstrates higher confidence in predicting exactly one week ahead ($t+7$) compared to six days ahead ($t+6$), because the target variable is highly correlated with the same day of the previous week.\n",
+    "> \n",
+    "> ### 💡 Final Inference & Business Value\n",
+    "> The empirical evidence confirms that the forecasting architecture is highly resilient. Despite the expected error degradation over time, the maximum observed $MAPE$ remains strictly below $10\\%$ across all horizons (peaking at $9.4\\%$). This bounded error growth proves that the model does not suffer from exponential variance explosion, making it exceptionally reliable for weekly automated inventory replenishment and resource allocation.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cd1adf45",
    "metadata": {},
    "source": [
@@ -763,6 +803,38 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f8ebbbc",
+   "metadata": {},
+   "source": [
+    "> # 📉 Section 2 Comprehensive Report: Probabilistic Forecasting & Uncertainty Estimation\n",
+    "> \n",
+    "> **Objective:** \n",
+    "> To transition from deterministic point forecasting to probabilistic bound estimation ($P10-P90$ intervals), systematically evaluating the model's uncertainty calibration and heteroscedastic variance dynamics.\n",
+    "> \n",
+    "> ### 🧠 Methodological Justification: Why Probabilistic Forecasting?\n",
+    "> Traditional deterministic models (point forecasts) inherently output a single expected value. However, in stochastic environments like retail supply chains, every prediction carries a degree of inherent uncertainty. A point forecast of $5,000$ units does not convey whether the true value is likely to fall between $4,900-5,100$ (high confidence) or $3,000-7,000$ (low confidence). \n",
+    "> By utilizing a **Probabilistic Forecasting** framework (generating $10^{th}$ and $90^{th}$ percentiles), we explicitly quantify predictive uncertainty. This allows the business to transition from static inventory buffers to **Dynamic Safety Stock** policies. Inventory can be optimized based on the desired Service Level Agreement (SLA)—for instance, stocking up to the $P90$ level guarantees an $80-90\\%$ probability of avoiding a stock-out, directly translating mathematical uncertainty into quantifiable financial risk management.\n",
+    "> \n",
+    "> ### 🔍 Detailed Quantitative & Qualitative Observations\n",
+    "> \n",
+    "> **1. Interval Calibration and Empirical Coverage:**\n",
+    "> - The probabilistic time-series plot demonstrates excellent calibration of the $80\\%$ Prediction Interval (the blue shaded region bounded by $P10$ and $P90$). \n",
+    "> - The vast majority of the actual sales data points fall perfectly within this shaded band. The occurrences of actuals breaching the boundaries (highlighted as red nodes) are statistically proportional to the expected $20\\%$ out-of-band probability. This indicates that the model is neither pathologically overconfident (bands too narrow) nor overly conservative (bands too wide).\n",
+    "> \n",
+    "> **2. Heteroscedasticity in Sales Variance:**\n",
+    "> - The scatter plot mapping \"Uncertainty ($P90 - P10$)\" against \"Forecast Magnitude ($P50$)\" provides a profound structural insight: the presence of strong **Heteroscedasticity**.\n",
+    "> - There is a clear, positive, non-linear correlation between the volume of expected sales and the width of the uncertainty band. As the predicted median sales volume ($P50$) increases, the variance (uncertainty) expands proportionately.\n",
+    "> \n",
+    "> **3. Variance Thresholds and Extreme Events:**\n",
+    "> - **High Confidence Regime:** For standard days where predictions fall below $10,000$ units, the data points are densely clustered with tight uncertainty bands (low variance). The model is highly confident in its baseline operations.\n",
+    "> - **High Uncertainty Regime:** For extreme sales events (approaching $15,000$ to $25,000$ units, likely representing major promotional campaigns or holiday peaks), the uncertainty band widens exponentially. This is empirically accurate; consumer behavior during massive sales events is inherently more volatile and harder to pinpoint than on standard weekdays.\n",
+    "> \n",
+    "> ### 💡 Final Inference & Business Value\n",
+    "> The probabilistic model fundamentally elevates the forecasting architecture from a simple predictive tool to a comprehensive risk-management engine. By proving that high-volume days carry inherently higher variance, the model explicitly advises stakeholders that promotional days require proportionally larger safety-stock buffers compared to normal days. This dynamic estimation optimizes working capital, ensuring funds are not tied up in unnecessary inventory on high-confidence days, while aggressively protecting against stock-outs on high-variance, high-reward days.\n"
    ]
   },
   {
@@ -1018,26 +1090,9 @@
    "id": "326045bb",
    "metadata": {},
    "source": [
-    "# Comparative Analysis: Impact of Closed Days on Classification\n",
+    "#  Impact of Closed Days on Classification\n",
     "\n",
-    "In this section, we analyze how the treatment of closed days (`Sales = 0`) fundamentally alters the classification problem and the resulting evaluation metrics. We conducted two experiments:\n",
-    "\n",
-    "## Scenario 1: Excluding Closed Days (Scientific Approach)\n",
-    "*   **Method:** We filtered the dataset to include only days where the store was open (`Sales > 0`) before calculating class thresholds and training the model.\n",
-    "*   **Logic:** The goal is to predict sales volume *conditional on the store being open*. This forces the model to learn complex patterns based on promotions, seasonality, and competition.\n",
-    "*   **Results:** The metrics (e.g., F1-Score ~0.85) reflect the true difficulty of distinguishing between Low, Medium, and High sales days based on market factors.\n",
-    "\n",
-    "## Scenario 2: Including Closed Days (The \"Trivial\" Approach)\n",
-    "*   **Method:** We retained all days, including holidays and Sundays where sales were zero.\n",
-    "*   **Observation:** Since approximately 17% of the data consists of zero sales, the \"Low\" class threshold ($P_{33}$) drops significantly. Consequently, almost all closed days are assigned to the \"Low\" class.\n",
-    "*   **Data Leakage/Bias:** The dataset contains the feature `Open` (0 or 1). The model easily learns the rule:\n",
-    "    > *If `Open == 0`, then Probability(Low Class) $\\approx$ 100%.*\n",
-    "*   **Results:** \n",
-    "    *   **Metrics:** We observe artificially inflated metrics (e.g., **ROC-AUC > 0.99** for the Low class).\n",
-    "    *   **ROC Curve:** The ROC curve for the \"Low\" class (Blue line) becomes a near-perfect right angle, indicating that the model solves this part of the problem trivially without learning actual sales dynamics.\n",
-    "\n",
-    "## Conclusion\n",
-    "While **Scenario 2** yields higher numerical scores, it is misleading for business planning. Predicting that a closed store will have zero sales is trivial. **Scenario 1** provides a robust, real-world assessment of the model's ability to forecast revenue fluctuation during active business days.\n"
+    "In this section, we analyze how the treatment of closed days (`Sales = 0`) fundamentally alters the classification problem and the resulting evaluation metrics. We conducted another experiment:"
    ]
   },
   {
@@ -1216,6 +1271,41 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "670be8aa",
+   "metadata": {},
+   "source": [
+    "> # 🎯 Section 3 Comprehensive Report: Sales Category Classification & Risk Analysis\n",
+    "> \n",
+    "> **Objective:** \n",
+    "> To evaluate the discriminative capability of the classification model in categorizing daily sales volume into operational tiers: Low (0), Medium (1), and High (2), and to analyze the cost-matrix implications of its misclassifications.\n",
+    "> \n",
+    "> ### 🧠 Methodological Justification: Why Classify Sales into Tiers?\n",
+    "> While regression models (point forecasting) predict the exact number of units sold, retail supply chains and store managers often execute decisions based on discrete operational \"regimes\" or thresholds. For instance, staffing requires distinct shift schedules (minimal vs. peak staff), and logistics require distinct truck capacities, neither of which changes for every single unit variation in sales. \n",
+    "> By discretizing the continuous sales data into **Low, Medium, and High classes**, we create an actionable, tier-based decision-making framework. This approach is intrinsically more robust to minor noise and small variance in the data; a prediction off by 100 units might be an error in regression, but in classification, it reliably keeps the business within the correct operational tier.\n",
+    "> \n",
+    "> ### 🔍 Detailed Quantitative & Qualitative Observations\n",
+    "> \n",
+    "> **1. Diagonal Dominance and True Positive Density:**\n",
+    "> - The Confusion Matrix exhibits overwhelming diagonal dominance, confirming the model's high discriminative accuracy across all classes. \n",
+    "> - The model correctly identified and classified $21,212$ instances as Low, $24,417$ as Medium, and $27,915$ as High. This symmetric performance indicates that the algorithm does not suffer from extreme class imbalance bias and accurately maps the underlying feature space to the correct target labels.\n",
+    "> \n",
+    "> **2. The Nature of \"Soft\" Errors (Adjacent Misclassifications):**\n",
+    "> - A critical examination of the off-diagonal cells reveals that the vast majority of the model's errors are \"adjacent\" (e.g., misclassifying a Low sales day as Medium, or Medium as High). \n",
+    "> - For example, $2,370$ true \"Low\" instances were predicted as \"Medium\", and $2,544$ true \"High\" instances were predicted as \"Medium\". \n",
+    "> - From a data science perspective, this is completely expected. Sales distributions are continuous; elements lying exactly on the boundary threshold between 'Low' and 'Medium' are inherently ambiguous. These adjacent errors represent borderline cases rather than fundamental model failures.\n",
+    "> \n",
+    "> **3. Severe Error Mitigation (Extreme Misclassifications):**\n",
+    "> - The most crucial metric for business risk management is the occurrence of extreme errors (the top-right and bottom-left corners of the matrix).\n",
+    "> - **Catastrophic Stock-out Risk:** Predicting \"Low\" when the actual sales are \"High\" occurred only **$19$** times out of tens of thousands of predictions.\n",
+    "> - **Catastrophic Overstock Risk:** Predicting \"High\" when actual sales are \"Low\" occurred only **$14$** times.\n",
+    "> - The near-zero frequency of these extreme misclassifications proves that the model effectively mitigates catastrophic operational risks.\n",
+    "> \n",
+    "> ### 💡 Final Inference & Business Value\n",
+    "> The classification framework serves as a highly reliable operational safety net. The algorithmic structure correctly understands the macro-level sales regimes. Because misclassifications are almost entirely restricted to neighboring classes, the potential financial penalty of prediction errors is minimized (e.g., slightly over-staffing a 'Low' day by mistaking it for 'Medium' is vastly preferable to under-staffing a 'High' day). This makes the model exceptionally viable for automated threshold-based resource planning.\n"
    ]
   }
  ],
